# obscura

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  OBJECTIVE.md  README.md  SUMMARY.md  TODO.md  build.rs  corrected_full_pedersen.rs  corrected_pedersen_jubjub.rs  coverage-summary.md  fix_notes.txt  fixed_code.txt  get_circuit_method.txt  implementation_summary.md  main_fixed.rs  new_main.rs  pos_fixed.rs  tarpaulin-report.html  tarpaulin-report.json  test_rng.rs  todo_blockchain.md  todo_consensus.md  todo_crypto.md  todo_networking.md  uncovered.json
.cargo/: config.toml
.github/workflows/: build-test.yml  documentation.yml  documentation.yml.disabled  format-code.yml.disabled  release.yml  release.yml.disable
TODOs/: 1_todo_crypto.md  2_todo_wallet.md  3_todo_blockchain.md  5_todo_networking.md  6_todo_config.md  7_todo_website_CI-CD.md
benches/: consensus_benchmarks.rs  critical_paths.rs  crypto_bench.rs  crypto_benchmarks.rs
docs/: CURVE_GUIDE.md  DOCUMENTATION_OPTIONS.md  EXAMPLES.md  FEATURE_FLAGS.md  MIGRATION_GUIDE.md  README.md  SUMMARY.md  advanced_key_management.md  advanced_metadata_protection.md  advanced_view_key_system.md  architecture.md  block_structure.md  book.toml  consensus.md  contributing.md  critical_path_benchmarking.md  cryptography.md  development.md  error_handling_guidelines.md  faq.md  glossary.md  index.md  memory_protection.md  memory_protection_cross_platform.md  mining_rewards_index.md  multi_hop_routing.md  networking.md  peer_reputation_privacy.md  peer_reputation_privacy_design.md  peer_reputation_privacy_spec.md  pos_enhancements.md  power_analysis_protection.md  privacy_configuration.md  privacy_configuration_compatibility.md  privacy_configuration_developer_guide.md  privacy_configuration_diagrams.md  privacy_configuration_migration.md  privacy_configuration_recipes.md  privacy_configuration_troubleshooting.md  privacy_features.md  (+12 more)
docs/api/: pos_enhancements_api.md
docs/architecture/: architecture_overview.md  pos_architecture.md
docs/consensus/: BLOCK_STRUCTURE.md  HYBRID_CONSENSUS.md  README.md  STAKING.md  bft_finality.md  coinbase_maturity.md  cpfp.md  difficulty.md  fee_market.md  implementation.md  index.md  multi_asset_staking.md  replace_by_fee.md  sharding.md  threshold_signatures.md  validator_enhancements.md
docs/contributing/: documentation.md
docs/crypto/: adaptive_timeout.md  adaptive_timeout_summary.md  api_reference.md  bulletproofs.md  chacha20.md  index.md  key_compartmentalization.md  key_derivation.md  key_derivation_security.md  key_generation.md  key_usage_protection.md  keypair_encryption.md  keys.md  performance_optimization.md  privacy_features.md  randomx.md  security_considerations.md  security_improvements.md
docs/cryptography/: atomic_swaps.md  blinding_protocol.md  bls12_381_optimizations.md  commitment_verification.md  curves.md  index.md  integration_guide.md  jubjub_optimizations.md  pedersen_commitments.md  verification_system.md
docs/dex/: index.md  specification.md
docs/governance/: index.md  system.md
docs/guides/: advanced_examples.md  implementing_pos_enhancements.md
docs/mining/: implementation.md  index.md  pool_mining.md  rewards.md
docs/mining_rewards/: index.md
docs/network/: node_discovery.md
docs/networking/: anonymous_routing.md  block_announcement_protocol.md  block_propagation.md  connection_management.md  dns_over_https.md  fingerprinting_protection.md  handshake_protocol.md  i2p_proxy.md  index.md  p2p_protocol.md  protocol_morphing.md
docs/privacy/: circuit_routing.md  dandelion_plus_plus.md  dandelion_protocol.md  index.md
docs/reference/: documentation-quick-reference.md
docs/scripts/: documentation-generator.md
docs/security/: index.md  security_implementation.md
docs/smart_contracts/: index.md  interface.md
docs/storage/: blockchain.md  index.md
docs/testing/: consensus_tests.md  index.md  test_optimization.md  test_strategy.md  testing_best_practices.md
docs/transactions/: index.md  wallet_transaction_submission.md
docs/wallet/: implementation.md  index.md  integration.md  interface.md
examples/: privacy_config_example.rs
include/: obscura.h
lib/: randomx.lib
proptest-regressions/crypto/: jubjub.txt
scripts/: README.md  analyze_error_usage.py  audit.bat  audit.sh  bench.bat  bench.sh  chain-utils.bat  chain-utils.sh  ci-local.bat  ci-local.sh  clean-all.bat  clean-all.sh  coverage.bat  coverage.sh  cross-compile.bat  cross-compile.ps1  cross-compile.sh  docs.bat  docs.sh  format.bat  format.sh  lint.bat  lint.sh  release.bat  release.sh  run_all_tests.ps1  run_tests.ps1  test-all.bat  test-all.sh
src/: errors.rs  lib.rs  main.rs  utils.rs
src/blockchain/: block_structure.rs  mempool.rs  mod.rs  test_helpers.rs  transaction.rs  transaction_ext.rs
src/commands/: upload.rs
src/config/: examples.rs  mod.rs  presets.rs  privacy_registry.rs  propagation.rs  tests.rs  validation.rs
src/consensus/: README_MULTI_ASSET_STAKING.md  difficulty.rs  hybrid.rs  hybrid_optimizations.rs  mining_reward.rs  mod.rs  pos.rs  pos.rs.fixed  pos_fixes.rs  pos_methods.rs  pos_old.rs  pos_struct_fixes.rs  pos_structs.rs  pow.rs  profile_integration.rs  randomx.rs  randomx_vm.rs  randomx_wrapper.rs  sharding.rs  threshold_sig.rs  vrf.rs
src/crypto/: README.md  atomic_swap.rs  audit-documentation.md  audit.rs  audit_alerting.rs  audit_analytics.rs  audit_external.rs  audit_integration.rs  audit_logging.rs  audit_tests.rs  blinding_store.rs  bls12_381.rs  bulletproofs.rs  bulletproofs_impl.rs  commitment_verification.rs  constant_time.rs  errors.rs  examples.rs  examples_standalone.rs  hardware_accel.rs  hardware_accel_README.md  hardware_accel_benchmarks.rs  homomorphic_derivation.rs  jubjub.rs  mod.rs  (+18 more)
tests/: check_transition_test.rs  dkg_example_test.rs  dkg_fixed_test.rs  memory_protection_integration_test.rs  mod.rs  pos_integration_test.rs  power_analysis_basic_test.rs  power_analysis_protection_integration_test.rs  privacy_primitive_test.rs  side_channel_protection_integration_test.rs
wix/: main.wxs
(+154 files in other folders)
