[package]
name = "obscura"
version = "0.7.6"
authors = ["Obscura Team <ethan@obscura.org>"]
description = "A privacy-focused cryptocurrency with stealth addresses and confidential transactions"
repository = "https://github.com/obscura-org/obscura"
edition = "2021"

[dependencies]
# Cryptography dependencies
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
blake2 = "0.10.6"
blake3 = "1.3"
blake2b_simd = "1.0"
hmac = "0.12"
merlin = "3.0"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
bincode = "1.3"
hex = "0.4.3"
once_cell = "1.8"
lazy_static = "1.4"
subtle = "2.4"
# Parallel computation 
rayon = "1.7"
num_cpus = "1.16.0"

# Additional dependencies identified from errors
rand_chacha = "0.3.1"
siphasher = "0.3"
group = "0.13.0"
ff = "0.13.0"

# BLS12-381 and Jubjub dependencies
blstrs = { version = "0.7.1", features = ["serde"] }
ark-bls12-381 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["parallel"] }
ark-ec = "0.4.0"
ark-ff = "0.4.0"
zcash_primitives = "0.11"
halo2_proofs = "0.3"

# Networking dependencies
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
libp2p = { version = "0.51", features = ["tcp", "dns", "websocket", "noise", "yamux", "ping", "identify", "kad", "gossipsub", "mdns"] }
libp2p-quic = { version = "0.9.2-alpha" }
libp2p-webrtc = { version = "0.9.0-alpha" }
chacha20poly1305 = "0.10.1"
chacha20 = "0.9.0"
libc = "0.2"
socket2 = "0.5.3"

# Storage dependencies
rocksdb = { version = "0.20", optional = true }
sled = "0.34"

# Consensus dependencies
randomx-rs = { version = "0.2", optional = true }
threshold_crypto = "0.4"

# CLI and configuration
config = "0.13"
clap = { version = "4.1", features = ["derive"] }
generic-array = "0.14.7"
toml = "0.5"

# Additional missing dependencies
log = "0.4"
env_logger = "0.10.0"

# Visualization and human-friendly output
chrono = "0.4"
colored = "2.0"
prettytable-rs = "0.10"

# Monitoring and metrics
prometheus = { version = "0.13", optional = true }

# Testing and benchmarking
criterion = "0.4"

# Development tooling
rand_distr = "0.4.3"

# New dependency
sys-info = "0.9"
twox-hash = "1.6.3"

[dev-dependencies]
tempfile = "3.5"
proptest = "1.1"
mockall = "0.11"

[build-dependencies]
cbindgen = "0.24"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "thin"
panic = "abort"
codegen-units = 1
incremental = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
incremental = true

[features]
default = ["parallel"]
test-utils = []
benchmarking = []
# Curve features - BLS12-381 and JubJub are now default
use-bls12-381 = []
use-jubjub = []
# Storage backend features
use-rocksdb = ["rocksdb"]
parallel = ["ark-std/parallel"]

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "consensus_benchmarks"
harness = false
