[package]
name = "obscura"
version = "0.7.31"
authors = ["Obscura Team <ethan@needtoaddadomainhere.fake>"]
description = "A privacy-focused cryptocurrency with stealth addresses and confidential transactions"
repository = "https://github.com/obscura-org/obscura"
edition = "2021"
license = "All Rights Reserved"

# Enable unstable features needed for implementation
[package.metadata.rust-analyzer]
rustc_private = true

#
[package.metadata.wix]
upgrade-guid = "F08B1FA7-6D15-4329-B87B-3C87DD26BBBA"
path-guid = "E0027766-FBCD-4416-B76E-14C658467CDC"
license = false
eula = false

[lib]
name = "obscura_core"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "obscura-bin"
path = "src/main.rs"

[[bin]]
name = "profiler"
path = "src/bin/profiler.rs"

# Add features
[features]
default = ["parallel"]
test-utils = []
benchmarking = []
# Storage backend features
use-rocksdb = ["rocksdb"]
parallel = ["ark-std/parallel"]
# Privacy network features
# Updated to use socks instead of arti-client for Tor connectivity
use-tor = ["socks"]
use-i2p = ["i2p"]
# Feature flag for pluggable transports without associated crates
use-pluggable-transports = []
integration-tests = []
# Monitoring features
metrics = ["prometheus"]
# Consensus features
randomx = ["randomx-rs"]
# Examples feature
examples = []

[dependencies]
# Cryptography dependencies
rand = { version = "0.8.5", features = ["std", "small_rng", "alloc"] }
rand_core = "0.6.4"
rand_distr = "0.4.3"
sha2 = "0.10"
blake2 = "0.10.6"
blake3 = "1.7"
blake2b_simd = "1.0"
hmac = "0.12"
merlin = "3.0"
ring = "0.17.14"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.140"
bincode = "2.0.1"
hex = "0.4.3"
once_cell = "1.21"
lazy_static = "1.5"
subtle = "2.6"
num-traits = "0.2"
# Parallel computation 
rayon = "1.10"
num_cpus = "1.16.0"


rand_chacha = "0.3.1"
siphasher = "0.3"
group = "0.13.0"
ff = "0.13.1"
winapi = { version = "0.3", features = ["winnt", "memoryapi", "errhandlingapi", "processthreadsapi", "handleapi", "wincrypt", "sysinfoapi"] }
parking_lot = "0.12.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
socket2 = { version = "0.5.8", features = ["all"] }

# BLS12-381 and Jubjub dependencies
blstrs = { version = "0.7.1", features = ["serde"] }
ark-bls12-381 = "0.5.0"
ark-ed-on-bls12-381 = "0.5.0"
ark-serialize = "0.5.0"
ark-std = { version = "0.5.0", features = ["parallel"] }
ark-ec = "0.5.0"
ark-ff = "0.5.0"
zcash_primitives = "0.22.0"
halo2_proofs = "0.3"

# Networking dependencies
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12.15", features = ["json", "socks"] }
thiserror = "2.0.12"
libp2p = { version = "0.51", features = ["tcp", "dns", "websocket", "noise", "yamux", "ping", "identify", "kad", "gossipsub", "mdns"] }
libp2p-quic = { version = "0.9.3" }
libp2p-webrtc = { version = "0.9.0-alpha" }
chacha20poly1305 = "0.10.1"
chacha20 = "0.9.1"
libc = "0.2"

# Tor and I2P dependencies
# Commenting out arti-client for now to avoid the dependency conflict
# arti-client = { version = "0.8.3", optional = true }
socks = { version = "0.3.4", optional = true }
i2p = { version = "0.0.1", optional = true }

# Storage dependencies
rocksdb = { version = "0.23.0", optional = true }
sled = "0.34"

# Consensus dependencies
randomx-rs = { version = "0.2", optional = true }
threshold_crypto = "0.4"

# CLI and configuration
config = "0.15.11"
clap = { version = "4.5", features = ["derive"] }
generic-array = "0.14.7"
toml = "0.8.20"
semver = { version = "1.0", features = ["serde"] }

# Additional missing dependencies
log = "0.4"
env_logger = "0.11.7"
yoke = "0.8.0"

# Visualization and human-friendly output
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"
prettytable-rs = "0.10"

# Monitoring and metrics
prometheus = { version = "0.13", optional = true }

# Testing and benchmarking
criterion = "0.5.1"

# New dependency
sys-info = "0.9"
twox-hash = "1.6.3"
ctrlc = "3.4.5"  # Added for profiler binary

[dev-dependencies]
tempfile = "3.19"
proptest = "1.6"
mockall = "0.13.1"

[build-dependencies]
cbindgen = "0.28.0"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "thin"
panic = "abort"
codegen-units = 1
incremental = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
incremental = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "consensus_benchmarks"
harness = false
